feat: zobrazit cas zdrojoveho importu v prehledu snidani
